--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         function displayMessage(message){
 
         };
+
+        function newGame(){
+            
+        }
+        function endGame(){
+
+        }
         
       </script>
 </body>
