--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         });
         }
         function validateGuess(guess){
-            if(isNaN(guess){
+            if(isNaN(guess)){
                 alert('please enter a valid number')
             }else if(guess < 1){
                 alert('please enter a number more than 1')
@@ -76,7 +76,7 @@
             }
 
 
-        )
+        
         };
 
         function checkGuess(guess){
